Legal pages + global footer links (AdSense-ready)

--- a/templates/about.html
+++ b/templates/about.html
@@ -215,5 +215,6 @@
   {% include "_feedback.html" %}
   <script src="{{ url_for('static', filename='js/navbar.js') }}" defer></script>
   <script src="{{ url_for('static', filename='js/feedback.js') }}" defer></script>
+  {% include "_legal_footer.html" %}
 </body>
 </html>
