--- a/templates/index.html
+++ b/templates/index.html
@@ -17808,6 +17808,7 @@ const batchG = (smoothieBatchMlOverride != null)
       })();
     });
   </script>
+    {% include "_legal_footer.html" %}
     <!-- Toast Container -->
     <div id="toast-container" class="toast-container"></div>
     <button id="feedback-open" class="feedback-fab feedback-open" data-feedback-open type="button">
