--- a/templates/admin_feedback.html
+++ b/templates/admin_feedback.html
@@ -51,5 +51,6 @@
   </table>
   {% include "_feedback.html" %}
   <script src="{{ url_for('static', filename='js/feedback.js') }}" defer></script>
+  {% include "_legal_footer.html" %}
 </body>
 </html>
