--- a/templates/browser.html
+++ b/templates/browser.html
@@ -474,6 +474,7 @@
     </script>
     {% include "_feedback.html" %}
     <script src="{{ url_for('static', filename='js/feedback.js') }}" defer></script>
+  {% include "_legal_footer.html" %}
 </body>
 </html>
 
