--- a/templates/index_docs.html
+++ b/templates/index_docs.html
@@ -105,5 +105,6 @@
     </div>
     {% include "_feedback.html" %}
     <script src="{{ url_for('static', filename='js/feedback.js') }}" defer></script>
+  {% include "_legal_footer.html" %}
 </body>
 </html>
