--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive_overrides.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/feedback.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/legal.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/legal.css') }}?v=10">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - PureFyul</title>
 </head>
@@ -135,5 +135,6 @@
 
     </div>
   </main>
+  <script defer src="{{ url_for('static', filename='js/navbar.js') }}"></script>
 </body>
 </html>
