Add AdSense site code to head via shared include

--- a/templates/browser.html
+++ b/templates/browser.html
@@ -199,6 +199,7 @@
         }
     </style>
     <script src="{{ url_for('static', filename='js/security.js') }}"></script>
+  {% include "_adsense_head.html" %}
 </head>
 <body>
     <div class="container">
