--- a/templates/index.html
+++ b/templates/index.html
@@ -2925,6 +2925,7 @@
   </script>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive_overrides.css') }}">
+  {% include "_adsense_head.html" %}
 </head>
 <body>
   {% include "_navbar.html" %}
