--- a/templates/index_docs.html
+++ b/templates/index_docs.html
@@ -60,6 +60,7 @@
             text-align: center;
         }
     </style>
+  {% include "_adsense_head.html" %}
 </head>
 <body>
     <div class="container">
