--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/feedback.css') }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pricing - PureFyul</title>
+  {% include "_adsense_head.html" %}
 </head>
 <body>
   {% include "_navbar.html" %}
