--- a/templates/terms.html
+++ b/templates/terms.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/legal.css') }}?v=10">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms of Service - PureFyul</title>
+  {% include "_adsense_head.html" %}
 </head>
 <body>
   {% include "_navbar.html" %}
